add coverage output data

--- a/reports-fe/package.json
+++ b/reports-fe/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "serve:dist": "serve -s dist -p 2649",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "react": "^18.3.1",
